Set all details

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     </div>
   </main>
 
+  <footer class="text-center">
+    <div class="d-flex justify-content-center align-items-center">
+      <strong id="count"></strong>
+    </div>
+    <p>E' possibile zoomare la mappa, spostare i marker e visualizzare il contenuto</p>
+    <pre>Powered by Forklein</pre>
+  </footer>
+
   <script src="./js/script.js"></script>
 </body>
 
